# ros2_robotarium

./: .gitignore  README.md
robotarium/: CMakeLists.txt  package.xml
robotarium_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robotarium_bringup/launch/: spawn_robot.launch.py  spawn_robotarium.launch.py
robotarium_bringup/robotarium_bringup/: spawn_gritsbotx.py  spawn_robot.py
robotarium_examples/: package.xml  setup.cfg  setup.py
robotarium_examples/robotarium_examples/barrier_certificates/: barrier_certificates.py  si_barriers_with_boundary.py  uni_barriers_with_boundary.py  uni_dd_barriers_with_boundary.py
robotarium_examples/robotarium_examples/consensus/: consensus.py  consensus_fewer_errors.py
robotarium_examples/robotarium_examples/data_saving/: leader_follower_save_data.py
robotarium_examples/robotarium_examples/formation_control/: formation_control.py
robotarium_examples/robotarium_examples/go_to_point/: si_go_to_point.py  uni_go_to_point.py
robotarium_examples/robotarium_examples/go_to_pose/: uni_go_to_pose_clf.py  uni_go_to_pose_hybrid.py
robotarium_examples/robotarium_examples/leader_follower_static/: leader_follower.py
robotarium_gazebo/: CMakeLists.txt  package.xml
robotarium_gazebo/blender/: robotarium.blend
robotarium_gazebo/models/gritsbotx/: model.config  model.sdf
robotarium_gazebo/models/overhead_camera/: model.config  model.sdf
robotarium_node/: README.md  package.xml  setup.cfg  setup.py
robotarium_node/robotarium_node/: robotarium.py  robotarium.py.bak  robotarium_abc.py  robotarium_abc.py.bak
(+19 files in other folders)
