<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotarium</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zkakish@gmail.com">zmk5</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robotarium_bringup</exec_depend>
  <exec_depend>robotarium_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
